# viperleed

./: .gitignore  .pylintrc  .readthedocs.yaml  ASE_API_ViPErLEED.py  AUXEXPBEAMS_to_EXPBEAMS.py  CITATION.bib  Combine-POSCAR.py  LICENSE  LICENSE.md  ModifyPhaseshifts.py  POSCAR_get_bulk_repeat.py  README.md  ViPErLEED_Ase_API.py  __init__.py  _test_report.txt  bookkeeper.py  dependencies.txt  dev_requirements.txt  doc_requirements.txt  example-job-from-source.sh  example-job.sh  gui.py  job.py  measurement_data.csv  pyproject.toml  requirements-dev.txt  requirements-dist.txt  requirements-doc.txt  requirements-tests.txt  requirements.txt  test.py  test_qserial_comm.py  theobeams_fix.ipynb  tleedm-doc.txt  tleedm.py  tleedm_calls_tests.ipynb  tleedm_from_ase.py  viperleed_from_ase.py  vprglobals.py
.github/workflows/: distribute_built_dist.yml  pylint.yml  unit_tests.yml  update_actions.yml
.spyproject/: workspace.ini
.spyproject/config/: workspace.ini
container/: viperleed.yml  viperleed_container.def  viperleed_job_conda_v1.sh  viperleed_job_v1.sh
devutils/: test_qserial_comm.py  viperleed_hardware.ini
doc/: LICENSE  LICENSE.md  conf.py  index.rst  references.bib  references.rst  spelling_wordlist.txt  substitutions.rst  table_of_contents.rst
doc/_ext/: secref.py
doc/_static/: example_job_script.txt
doc/content/: api.rst  appendix.rst  aseapi.rst  background.rst  citing.rst  command_line_tools.rst  examples.rst  files.rst  getting_started.rst  glossary.rst  hardware.rst  imagej_plugins.rst  input_files.rst  installation.rst  introduction.rst  license.rst  measurement.rst  output_files.rst  param_index.rst  param_name.rst  param_section.rst  param_toc.rst  param_topics.rst  spot_tracker.rst  supp_files.rst  tensor_leed.rst  utilities.rst  viperleed_calc.rst  work_segments.rst
environments/: viperleed_base.yml  viperleed_dev.yml  viperleed_job_singularity_v1.sh
fortranformat/: FortranRecordReader.py  FortranRecordWriter.py  __init__.py  _edit_descriptors.py  _input.py  _lexer.py  _output.py  _parser.py
guilib/: .pylintrc  __init__.py  base.py  basewidgets.py  decorators.py  helpers.py  mathparse.py  modulebase.py  pluginsbase.py  selectmodule.py  selectplugin.py  widgetdecorators.py  widgetslib.py
guilib/_lint/: base.lint
guilib/classes/: __init__.py  beamindex.py  lattice2d.py  planegroup.py
guilib/dialogs/: __init__.py  busywindow.py  constants.py  dropdowndialog.py  errors.py
guilib/leedsim/: ExportCSVDialog.py  NewFileDialog.py  __init__.py  classes.py  exportcsv.py  exportcsvdialog.py  leedparameters.py  mainwindow.py  mainwindow_old.py  newfiledialog.py  widgets.py
guilib/measure/: __init__.py  constants.py  datapoints.py  hardwarebase.py  uimeasurement.py  uimeasurementsettings.py
guilib/tests/: __test_base.py  test_lattice.py  test_planegroup.py
guilib/widgets/: __init__.py  basewidgets.py
hardware/: Readme.md
hardware/arduino/: Arduino_control.ino  Readme.md  State_Machine.tex  coil_inductance.py  flux_density.py  notes_using_arduino-cli.txt  tmp  upload-sketch.py  viper-ino -- Commented.ino  viper-ino.ino  viper-ino_new.ino
hardware/schematics/: Readme.md
imagej/: Readme
obsolete/: GenerateAUXBEAMS.py  GenerateAUXGEO.py  GenerateAUXLATGEO.py  GenerateAUXNONSTRUCT.py  GeneratePARAM.py  Initialize.py  Michele-Try2.py  Module_TensErLEED_Interface.py  SimpleFortranFormat.py  Slab-backup-20191001.py  TestBeamgen.py  TestPhaseshiftgen.py  discard.py
requirements/: dev.txt  dev_scripts.txt  doc.txt  lint.txt  tests.txt
source/: EEASiSSS.x  seSernelius
source/atom_density_files/: compile
src/viperleed/: __init__.py  calc.mplstyle  cli.py  cli_base.py  gui.py
tensorleed/: Makefile  README.md  beamgen.v1.7  beamgen3.out  eeasisss
tensorleed/TensErLEED-v1.6/: beamgen3.f
tensorleed/TensErLEED-v1.72/: Makefile
tensorleed/TensErLEED-v1.73/: Makefile
tensorleed/atom_density_files/: at.x  atom.x  atomic.f  compile  inputAg-Zn.txt
tensorleed/beamgen_source/: beamgen.v1.7.f
tensorleed/eeasisss_code/: eeasisss.f90
tensorleed/eeasisss_new/: eeas  eeas.f90  eeasisss  eeasisss.f90  eeasisss_compile.txt  eeasisss_init.f90  eeasisss_input.txt  eeasisss_logfile.txt  eeasisss_main.f90
tensorleed/new_r-factor/: MS_smoothing.f90  Makefile  Untitled.ipynb  error_codes.py  rfactor.f08  rfactor.f90  rfactor.f95  rfactor.pyf  rfactor_example.py  smoothing.pyf  smoothing_example.py
tests/: cases_ase.py  conftest.py  helpers.py  poscar_slabs.py  test_beamgen.py  test_bookkeeper.py  test_cli.py  test_cli_base.py  test_from_ase.py  test_imgagingsource_wincamera.py  test_initialization.py  test_parameters.py  test_poscar.py  test_psgen.py  test_sections.py  test_symmetry.py  test_viperleed_form_ase.py  test_viperleed_from_ase.py
tests/calc/: cases_ase.py  conftest.py  poscar_slabs.py  tags.py  test_bookkeeper.py  test_cli.py  test_from_ase.py  test_psgen.py  test_run.py  test_run_sections.py  testinfo.py
tests/classes/: conftest.py  test_atom.py  test_atom_container.py  test_layer.py  test_r_error.py  test_slab.py
tests/files/: case_parameters.py  case_poscar_files.py  conftest.py  test_beamgen.py  test_displacements.py  test_iorfactor.py  test_parameters.py  test_phaseshifts.py  test_poscar.py  test_vibrocc.py
tests/gui/: DO_NOT_test_imgagingsource_wincamera.py  test_cli.py  test_detect_graphics.py  test_mathparse.py  test_mpl_graphics.py
tests/guilib/: DO_NOT_test_imgagingsource_wincamera.py  test_detect_graphics.py  test_mathparse.py  test_mpl_graphics.py
tleedmlib/: TL_base.py  __init__.py  base.py  baselib-obs.py  baselib.py  beamgen.py  checksums.py  leedbase.py  periodic_table.py  polynomialfeatures_no_interaction.py  psgen.py  read.py  symmetry.py  tl_base.py  write.py
unit_tests/: rfactor_test.py
utilities/: ModifyPhaseshifts.py  __init__.py  bookkeeper.py  modify_vacuum.py  recompile_parts.py  vasp_relax.py
viperleed/: __init__.py  __main__.py  bookkeeper.py  calc.py  cli.py  cli_base.py  from_ase.py  gui.py  tleedm.py
viperleed.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+2315 files in other folders)
